extends Node


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	league_standings_view("Burrito")
	league_standings_view("Corn")
	league_standings_view("Apple")
	league_standings_view("Carbomb")
	league_standings_view("Wild West")
	league_standings_view("Deep South")
	league_standings_view("Big East")
	league_standings_view("Ikea")
	league_standings_view("Alpha")
	league_standings_view("Omega")

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

func league_standings_view(Division):
	if Division == "Burrito":
		$"Burrito/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Burrito/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Burrito/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Burrito/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Burrito/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Corn":
		$"Corn/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Corn/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Corn/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Corn/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Corn/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Apple":
		$"Apple/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Apple/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Apple/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Apple/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Apple/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Carbomb":
		$"Carbomb/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Carbomb/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Carbomb/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Carbomb/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Carbomb/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Wild West":
		$"WildWest/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"WildWest/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"WildWest/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"WildWest/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"WildWest/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Deep South":
		$"DeepSouth/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"DeepSouth/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"DeepSouth/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"DeepSouth/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"DeepSouth/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Big East":
		$"BigEast/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"BigEast/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"BigEast/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"BigEast/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"BigEast/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Ikea":
		$"Ikea/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Ikea/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Ikea/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Ikea/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Ikea/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Alpha":
		$"Alpha/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Alpha/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Alpha/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Alpha/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Alpha/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	if Division == "Omega":
		$"Omega/ColorRect2/Team1".text = str(Standings.get_division(Division, 0, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 0, 0), "Differential")) + " Differential"
		$"Omega/ColorRect3/Team2".text = str(Standings.get_division(Division, 1, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 1, 0), "Differential")) + " Differential"
		$"Omega/ColorRect4/Team3".text = str(Standings.get_division(Division, 2, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 2, 0), "Differential")) + " Differential"
		$"Omega/ColorRect5/Team4".text = str(Standings.get_division(Division, 3, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 3, 0), "Differential")) + " Differential"
		$"Omega/ColorRect6/Team5".text = str(Standings.get_division(Division, 4, 0)) + ": " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Wins")) + "-" + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Losses")) + ", " + str(Standings.get_standings(Standings.get_division(Division, 4, 0), "Differential")) + " Differential"
	
	
func _on_button_2_button_up() -> void:
	get_tree().change_scene_to_file("res://scenes/seasonhub.tscn")
